--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Joseph Tadesse Portfolio">
-    <meta name="keywords" content="josepht273, Joseph Tadesse, CEO, Web Developer, Full Stack developer, Ethical Hacker">
-    <meta name="author" content="Joseph Tadesse">
-    <link rel="icon" type="image/svg+xml" href="https://ugc.production.linktr.ee/nOuNk5zXQ0iB35AC2ycS_image?io=true&size=avatar-v3_0" />
+    <meta name="description" content="Joseph Tadesse Portfolio" />
+    <meta
+      name="keywords"
+      content="josepht273, Joseph Tadesse, CEO, Web Developer, Full Stack developer, Ethical Hacker"
+    />
+    <meta name="author" content="Joseph Tadesse" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://ugc.production.linktr.ee/nOuNk5zXQ0iB35AC2ycS_image?io=true&size=avatar-v3_0"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joseph Tadesse AKA JosephT273</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
